# cpputil

./: .gitignore  .gitmodules  CMakeLists.txt
cpack/: CMakeLists.txt
install/: CMakeLists.txt
src/: CMakeLists.txt
src/cpputil/: CMakeLists.txt  api.h  config.h.in  version.cpp  version.h.in
src/cpputil/conversion/: conversion.cpp  conversion.h
src/cpputil/lockfile/: lockfile.cpp  lockfile.h  lockfile_impl_posix.hpp
src/cpputil/logging/: ibackend.cpp  ibackend.h  log_level.h  logging.cpp  logging.h  spdlog_backend.cpp  spdlog_backend.h
src/cpputil/misc/: always_false.hpp  demangle.cpp  demangle.h  demangled_type_name.hpp  formatters.hpp  is_optional.hpp  lock_types.hpp  sync_queue.hpp  throw_exception.h
src/cpputil/test/unit/conversion/: test_conversion.cpp
src/cpputil/test/unit/lockfile/: test_lockfile.cpp
src/examples/: CMakeLists.txt
src/examples/demo/: CMakeLists.txt  main.cpp
